# btcgoai

./: .gitignore  Cargo.toml  OPENCL_SUPPORT.md  README.md  bitcoin.go  build.rs  colors.go  data.go  go.mod  go.sum  main.go  models.go  run_bitcoin_finder.bat  search.go
.cargo/: config.toml
.github/workflows/: rust.yml
data/: hash160s.json
kernels/: search_bitcoin_keys.cl
src/: bitcoin.rs  bitcoin_puzzle.rs  bitcoin_puzzle_test.rs  colors.rs  crypto_kernels.cl  data.rs  gpu.rs  gpu_new.rs  main.rs  models.rs  performance.rs  search.rs
temp/: hash160_generator.go
