[package]
name = "btcrustai"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.30.2"
bitcoin_hashes = "0.12.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
rayon = "1.8.0"
num-bigint = { version = "0.4.4", features = ["rand"] }
chrono = "0.4.31"
crossterm = "0.27.0"
num-traits = "0.2.17"
num_cpus = "1.16.0"
mimalloc = { version = "0.1.39", default-features = false }
bs58 = "0.4.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
overflow-checks = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1 