[package]
name = "btcrustai"
version = "0.1.0"
edition = "2021"

[features]
default = []
opencl = ["opencl3"]  # Only include opencl3 dependency when opencl feature is enabled
mimalloc = ["dep:mimalloc"]

[dependencies]
bitcoin = "0.29.2"
bitcoin_hashes = "0.11.0"
secp256k1 = { version = "0.24.0", features = ["rand-std"] }
rayon = "1.7.0"
mimalloc = { version = "0.1.34", default-features = false, optional = true }
num-bigint = "0.4.3"
num-traits = "0.2.15"
num_cpus = "1.15.0"
chrono = "0.4.23"
ripemd = "0.1.3"
bs58 = "0.4.0"
hex = "0.4.3"
sysinfo = "0.29.0"
rand = "0.8.5"
libloading = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencl3 = { version = "0.1.2", optional = true }  # Only included when opencl feature is enabled
libc = { version = "0.2.172", default-features = false }

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.27"

[profile.dev]
# Faster compilation for development
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.ci]
inherits = "dev"
opt-level = 1     # Basic optimization for faster CI compilation
codegen-units = 16 # More units for parallel compilation
debug = 0         # No debug info to save time
strip = true      # Remove symbols for smaller files 
